[GD-161] refactor - 이벤트 생성 리펙토링 (#43)
* [GD-161] refactor : 파일 multipart로 받도록 리펙토링

* [GD-161] refactor : dto @Setter 제거

* [GD-161] refactor : 코드 정리